src/shaders/snapshots/vulkan_slang_renderer__shaders__build_tasks__tests__alignment_tests@shaders__compiled__std140_enums.json.snap
---
source: src/shaders/build_tasks.rs
info:
  relative_path: shaders/compiled/std140_enums.json
---
{
  "sourceFileName": "std140_enums.shader.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "params",
      "elementType": {
        "typeName": "EnumData",
        "fields": [
          {
            "kind": "scalar",
            "fieldName": "a",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 4
            },
            "scalarType": "float32"
          },
          {
            "kind": "enum",
            "fieldName": "mode",
            "binding": {
              "kind": "uniform",
              "offset": 4,
              "size": 4
            },
            "enumType": {
              "typeName": "Mode",
              "tagType": "uint32",
              "cases": [
                {
                  "name": "Off",
                  "value": 0
                },
                {
                  "name": "Sparse",
                  "value": 7
                },
                {
                  "name": "Dense",
                  "value": 9
                }
              ]
            }
          },
          {
            "kind": "enum",
            "fieldName": "kind",
            "binding": {
              "kind": "uniform",
              "offset": 8,
              "size": 4
            },
            "enumType": {
              "typeName": "Untagged",
              "tagType": "int32",
              "cases": [
                {
                  "name": "First",
                  "value": 0
                },
                {
                  "name": "Second",
                  "value": 1
                }
              ]
            }
          },
          {
            "kind": "scalar",
            "fieldName": "b",
            "binding": {
              "kind": "uniform",
              "offset": 12,
              "size": 4
            },
            "scalarType": "float32"
          }
        ]
      }
    }
  ],
  "vertexEntryPoint": {
    "entryPointName": "vertMain",
    "stage": "vertex",
    "parameters": [
      {
        "kind": "scalar",
        "parameterName": "id",
        "semanticName": "SV_VERTEXID",
        "scalarType": "uint32"
      }
    ]
  },
  "fragmentEntryPoint": {
    "entryPointName": "fragMain",
    "stage": "fragment",
    "parameters": []
  },
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "constantBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 16
          }
        ]
      }
    ],
    "pushConstantRanges": []
  }
}
