src/shaders/snapshots/vulkan_slang_renderer__shaders__build_tasks__tests__alignment_tests@shaders__compiled__std140_mixed_fields.json.snap
---
source: src/shaders/build_tasks.rs
info:
  relative_path: shaders/compiled/std140_mixed_fields.json
---
{
  "sourceFileName": "std140_mixed_fields.shader.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "params",
      "elementType": {
        "typeName": "MixedData",
        "fields": [
          {
            "kind": "scalar",
            "fieldName": "a",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 4
            },
            "scalarType": "float32"
          },
          {
            "kind": "vector",
            "fieldName": "b",
            "binding": {
              "kind": "uniform",
              "offset": 16,
              "size": 12
            },
            "elementCount": 3,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "scalar",
            "fieldName": "c",
            "binding": {
              "kind": "uniform",
              "offset": 28,
              "size": 4
            },
            "scalarType": "float32"
          },
          {
            "kind": "vector",
            "fieldName": "d",
            "binding": {
              "kind": "uniform",
              "offset": 32,
              "size": 8
            },
            "elementCount": 2,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "scalar",
            "fieldName": "e",
            "binding": {
              "kind": "uniform",
              "offset": 40,
              "size": 4
            },
            "scalarType": "uint32"
          },
          {
            "kind": "vector",
            "fieldName": "f",
            "binding": {
              "kind": "uniform",
              "offset": 48,
              "size": 16
            },
            "elementCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          }
        ]
      }
    }
  ],
  "vertexEntryPoint": {
    "entryPointName": "vertMain",
    "stage": "vertex",
    "parameters": [
      {
        "kind": "scalar",
        "parameterName": "id",
        "semanticName": "SV_VERTEXID",
        "scalarType": "uint32"
      }
    ]
  },
  "fragmentEntryPoint": {
    "entryPointName": "fragMain",
    "stage": "fragment",
    "parameters": []
  },
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "constantBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 64
          }
        ]
      }
    ],
    "pushConstantRanges": []
  }
}
