src/shaders/snapshots/vulkan_slang_renderer__shaders__build_tasks__tests__alignment_tests@shaders__compiled__std140_shared_enum.json.snap
---
source: src/shaders/build_tasks.rs
info:
  relative_path: shaders/compiled/std140_shared_enum.json
---
{
  "sourceFileName": "std140_shared_enum.shader.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "params",
      "elementType": {
        "typeName": "SharedEnumData",
        "fields": [
          {
            "kind": "scalar",
            "fieldName": "scale",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 4
            },
            "scalarType": "float32"
          },
          {
            "kind": "enum",
            "fieldName": "mode",
            "binding": {
              "kind": "uniform",
              "offset": 4,
              "size": 4
            },
            "enumType": {
              "typeName": "SharedMode",
              "tagType": "uint32",
              "cases": [
                {
                  "name": "Idle",
                  "value": 0
                },
                {
                  "name": "Busy",
                  "value": 1
                }
              ]
            }
          }
        ]
      }
    }
  ],
  "vertexEntryPoint": {
    "entryPointName": "vertMain",
    "stage": "vertex",
    "parameters": [
      {
        "kind": "scalar",
        "parameterName": "id",
        "semanticName": "SV_VERTEXID",
        "scalarType": "uint32"
      }
    ]
  },
  "fragmentEntryPoint": {
    "entryPointName": "fragMain",
    "stage": "fragment",
    "parameters": []
  },
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "constantBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 16
          }
        ]
      }
    ],
    "pushConstantRanges": []
  }
}
