src/shaders/snapshots/vulkan_slang_renderer__shaders__build_tasks__tests__alignment_tests@shaders__compiled__std140_vectors.json.snap
---
source: src/shaders/build_tasks.rs
info:
  relative_path: shaders/compiled/std140_vectors.json
---
{
  "sourceFileName": "std140_vectors.shader.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "params",
      "elementType": {
        "typeName": "VectorData",
        "fields": [
          {
            "kind": "vector",
            "fieldName": "a",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 8
            },
            "elementCount": 2,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "vector",
            "fieldName": "b",
            "binding": {
              "kind": "uniform",
              "offset": 16,
              "size": 16
            },
            "elementCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "vector",
            "fieldName": "c",
            "binding": {
              "kind": "uniform",
              "offset": 32,
              "size": 8
            },
            "elementCount": 2,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          }
        ]
      }
    }
  ],
  "vertexEntryPoint": {
    "entryPointName": "vertMain",
    "stage": "vertex",
    "parameters": [
      {
        "kind": "scalar",
        "parameterName": "id",
        "semanticName": "SV_VERTEXID",
        "scalarType": "uint32"
      }
    ]
  },
  "fragmentEntryPoint": {
    "entryPointName": "fragMain",
    "stage": "fragment",
    "parameters": []
  },
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "constantBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 48
          }
        ]
      }
    ],
    "pushConstantRanges": []
  }
}
