src/shaders/snapshots/vulkan_slang_renderer__shaders__build_tasks__tests__alignment_tests@shaders__compiled__std430_enums.json.snap
---
source: src/shaders/build_tasks.rs
info:
  relative_path: shaders/compiled/std430_enums.json
---
{
  "sourceFileName": "std430_enums.shader.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "params",
      "elementType": {
        "typeName": "Params",
        "fields": [
          {
            "kind": "pointer",
            "fieldName": "items",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 8
            },
            "pointeeType": {
              "typeName": "Item",
              "fields": [
                {
                  "kind": "scalar",
                  "fieldName": "value",
                  "binding": {
                    "kind": "uniform",
                    "offset": 0,
                    "size": 4
                  },
                  "scalarType": "float32"
                },
                {
                  "kind": "enum",
                  "fieldName": "kind",
                  "binding": {
                    "kind": "uniform",
                    "offset": 4,
                    "size": 4
                  },
                  "enumType": {
                    "typeName": "Kind",
                    "tagType": "uint32",
                    "cases": [
                      {
                        "name": "Point",
                        "value": 0
                      },
                      {
                        "name": "Line",
                        "value": 1
                      }
                    ]
                  }
                }
              ]
            },
            "pointeeSize": 8,
            "access": "readWrite"
          },
          {
            "kind": "struct",
            "fieldName": "nested",
            "binding": {
              "kind": "uniform",
              "offset": 16,
              "size": 16
            },
            "structType": {
              "typeName": "Nested",
              "fields": [
                {
                  "kind": "scalar",
                  "fieldName": "scale",
                  "binding": {
                    "kind": "uniform",
                    "offset": 0,
                    "size": 4
                  },
                  "scalarType": "float32"
                },
                {
                  "kind": "enum",
                  "fieldName": "kind",
                  "binding": {
                    "kind": "uniform",
                    "offset": 4,
                    "size": 4
                  },
                  "enumType": {
                    "typeName": "Kind",
                    "tagType": "uint32",
                    "cases": [
                      {
                        "name": "Point",
                        "value": 0
                      },
                      {
                        "name": "Line",
                        "value": 1
                      }
                    ]
                  }
                }
              ]
            }
          }
        ]
      }
    }
  ],
  "vertexEntryPoint": {
    "entryPointName": "vertMain",
    "stage": "vertex",
    "parameters": [
      {
        "kind": "scalar",
        "parameterName": "id",
        "semanticName": "SV_VERTEXID",
        "scalarType": "uint32"
      }
    ]
  },
  "fragmentEntryPoint": {
    "entryPointName": "fragMain",
    "stage": "fragment",
    "parameters": []
  },
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "constantBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 32
          }
        ]
      }
    ],
    "pushConstantRanges": []
  }
}
